# disk_reviewer

./: CLAUDE.md  Cargo.toml  README.md  README_EN.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-扫描引擎/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-treemap/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md
.planning/phases/03-快照与对比/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-UAT.md  03-VERIFICATION.md
docs/: INTRODUCTION.md  PROJECT.md  TDD_ENFORCEMENT.md
src/: app.rs  main.rs
src/platform/: drives.rs
src/scanner/: error.rs  mod.rs  types.rs  walker.rs
src/snapshot/: diff.rs  mod.rs  serialize.rs  storage.rs
src/treemap/: color.rs  layout.rs  mod.rs  renderer.rs  types.rs
src/ui/: breadcrumb.rs  comparison.rs  file_list.rs  info_panel.rs  mod.rs  snapshot_dialog.rs
