[package]
name = "disk_reviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI framework
eframe = "0.33.0"
egui = "0.33.0"

# Win32 API (feature-gated: only enable what we need)
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
] }

# Concurrency
rayon = "1.12.0"
crossbeam-channel = "0.5.15"

# Serialization (Phase 3 prep)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }

# Error handling
thiserror = "2"

[features]
default = []
snapshot = ["rusqlite"]
